# klights-core

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE_COMMERCIAL  NOTICE  QUICKSTART.md  README.md  build.rs  index.html  klights-archive-keyring.asc  public-release.md  release.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: package-smoke.yml  release.yml
apt/: index.html
doc/: README.md
packaging/default/: klights
packaging/docs/: package-repositories.md
packaging/systemd/: klights.service
proto/: replication.proto
scripts/package/: build-deb.sh  build-rhel-runtime-rpms.sh  build-rpm.sh  publish-apt-repo.sh  publish-rpm-repo.sh  sign-rpms.sh
src/: admission.rs  allocator.rs  api_handler_tests.rs  api_priority_fairness.rs  api_serialization_tests.rs  audit.rs  cli.rs  cni_plugin.rs  controller.rs  controller_dispatcher.rs  crd_status_tests.rs  cronjob_event_driven_scheduler_tests.rs  db_complete.rs  db_new.rs  deployment_replicaset_error_test.rs  json_patch.rs  label_selector.rs  leader_tls_policy.rs  lib.rs  main.rs  node_conditions_tests.rs  node_lease_tracker.rs  paths.rs  pidfile.rs  pod_identity.rs  pod_status_merge.rs  portforward.rs  resource_quota_event_driven_tests.rs  resource_semantics.rs  resourcequota_tests.rs  shutdown.rs  shutdown_test.rs  spdy.rs  utils.rs  version.rs
src/admission/: http_client.rs  request_context.rs  selectors.rs  tests.rs  validating_policy.rs  webhook_call.rs  webhook_response.rs  webhook_rules.rs
src/api/: apiservice_proxy.rs  backend_proxy_headers.rs  crd_conversion.rs  custom_resources.rs  debug.rs  defaulting.rs  defaulting_tests.rs  errors.rs  extractors.rs  finalizer_delete.rs  helpers.rs  integration_tests.rs  macros.rs  mod.rs  mod_tests.rs  namespace.rs  patch_tests.rs  pod_handlers.rs  pod_security.rs  query.rs  quotas.rs  raft_proxy.rs  rbac_admission.rs  response.rs  response_tests.rs  routes.rs  server_side_apply.rs  state.rs  test_support.rs  validation.rs  watch_stream.rs
src/api_discovery/: apiextensions_v1.rs  apps_v1.rs  authorization_v1.rs  batch_v1.rs  certificates_v1.rs  coordination_v1.rs  core_v1.rs  custom_resource.rs  discovery_v1.rs  events_k8s_io_v1.rs  groups.rs  metrics_v1beta1.rs  mod.rs  networking_v1.rs  node_k8s_io_v1.rs  openapi.rs  policy_v1.rs  rbac_v1.rs  scheduling_v1.rs  shared.rs  storage_v1.rs  tests.rs  tests_api_discovery_core.rs  tests_api_discovery_groups.rs
src/api_pod_subresources/: binding.rs  ephemeral.rs  eviction.rs  exec.rs  exec_spdy.rs  exec_ws.rs  logs.rs  mod.rs  node_proxy.rs  portforward.rs  proxy.rs  status.rs  tests.rs
src/api_status/: custom.rs  helpers.rs  mod.rs  scale.rs
src/auth/: authorizer.rs  bootstrap_authorizer.rs  ca_transport.rs  cert.rs  clock.rs  csr_policy.rs  csr_signer.rs  default_rbac.rs  default_roles.rs  identity.rs  impersonation.rs  kubeconfig.rs  kubelet_client_cert.rs  middleware.rs  mod.rs  node_authorizer.rs  node_policy_store.rs  oidc.rs  oidc_tests.rs  rbac_authorizer.rs  rbac_policy_store.rs  rbac_rule_evaluator.rs  request_attributes.rs  request_info.rs  token.rs  user.rs  webhook_auth.rs  webhook_auth_tests.rs
src/bootstrap/: bootstrap_token.rs  cluster_meta.rs  config.rs  controlplane_discovery.rs  leader_reconnect.rs  logging.rs  mod.rs  node_mode.rs  node_role.rs  observed_endpoint.rs  raft_transport.rs  runtime.rs  worker_identity.rs  worker_runtime.rs
src/control_plane/: mod.rs  service_account_tokens.rs
src/controllers/: annotations.rs  apiservice.rs  apiservice_controller.rs  coredns.rs  crd.rs  cronjob.rs  cronjob_scheduler.rs  csr_signer.rs  daemonset.rs  daemonset_controller.rs  deployment.rs  deployment_controller.rs  endpoints.rs  endpoints_controller.rs  gc.rs  hpa.rs  hpa_controller.rs  job.rs  job_controller.rs  kube_service.rs  mod.rs  namespace.rs  node_lifecycle.rs  node_subnet.rs  pdb.rs  pdb_controller.rs  pvc.rs  pvc_controller.rs  rbac_reconcile.rs  replicaset.rs  replicaset_controller.rs  replication_controller_runner.rs  replicationcontroller.rs  resource_quota.rs  scheduler.rs  service.rs  service_controller.rs  statefulset.rs  statefulset_controller.rs  test_utils.rs  (+1 more)
src/crd_tests/: delete_cascade.rs  mod.rs  status.rs  subresources.rs  validation.rs
(+612 files in other folders)
