[package]
name = "klights"
edition = "2024"
rust-version = "1.95.0"
authors = ["klights-core copyright holders <lapcchan@gmail.com>"]
description = "A resource-efficient, event-driven Kubernetes-compatible cluster runtime."
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/klights-net/klights-core"
homepage = "https://github.com/klights-net/klights-core"
documentation = "https://github.com/klights-net/klights-core/blob/main/README.md"
keywords = ["kubernetes", "k8s", "rust", "containerd", "control-plane"]
categories = ["command-line-utilities", "network-programming"]

[build-dependencies]
vergen = { version = "8", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
tonic-prost-build = "0.14"

[dependencies]
tokio = { version = ">=1.51.0, <1.52.0", features = ["rt", "rt-multi-thread", "macros", "time", "signal", "sync", "net", "process", "fs", "io-util"] }
tokio-util = "0.7"
axum = { version = "0.8", features = ["ws"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
rusqlite = { version = "0.32", features = ["hooks", "backup"] }
tokio-rusqlite = "0.6"
redb = "4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_ignored = "0.1"
k8s-openapi = { version = "0.24", features = ["v1_32", "schemars"] }
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
json-patch = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
hyper = { version = "1", features = ["http1", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
bytes = "1"
futures = "0.3"
anyhow = "1"
thiserror = "2"
tokio-rustls = "0.26"
rustls-pemfile = "2"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
time = "0.3"
x509-parser = "0.16"
base64 = "0.22"
hostname = "0.4"
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-reflect = "0.16"
k8s-pb = "0.9"
async-trait = "0.1"
k8s-cri = "0.11"
chrono = "0.4"
jsonwebtoken = "9"
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json", "native-tls", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
urlencoding = "2"
toml = "1.1.2"
sha1 = "0.11.0"
tokio-tungstenite = "0.29.0"
sha2 = "0.11.0"
serde_yaml = "0.9.34"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib"] }
zstd = "0.13"
nix = { version = "0.31.2", features = ["process", "term", "sched", "mount", "net"] }
rtnetlink = "0.14"
rand = { version = "0.10.0", features = ["std_rng"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rsa = { version = "0.9", features = ["pem"] }
inotify = "0.11.1"
paste = "1.0.15"
h2 = "0.4.13"
rust-cel-parser = "0.1.0"
cel = { version = "0.13.0", features = ["json"] }
nftnl = "0.9"
mnl = "0.3"
cron = "0.12"
netlink-packet-core = "0.7"
netlink-packet-core-08 = { package = "netlink-packet-core", version = "0.8" }
netlink-packet-generic-04 = { package = "netlink-packet-generic", version = "0.4" }
netlink-packet-route = "0.19"
netlink-sys = "0.8"
genetlink = "0.2.6"
netlink-packet-wireguard = "0.3.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
aes-gcm = "0.10.3"
# memory: jemalloc global allocator. Replaces glibc malloc, whose per-thread
# arenas retain freed memory under churn and never return it to the OS
# (multi-GB RSS that never shrinks). jemalloc fragments far less and, with
# the background purge thread, returns dirty pages to the OS proactively.
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

[profile.dev]
debug = 1

[dev-dependencies]
tempfile = "3"
rstest = "0.25"
proptest = "1.11.0"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
walkdir = "2"
proc-macro2 = { version = "1", features = ["span-locations"] }

[features]
default = []
sqlcipher = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
